# test-lib

./: CMakeLists.txt  README.md  foo.c  foo.h  libfoo.pc.in
